ispravio domensku logiku te separation of concerion korsitio tu kolike je moguce dodao nove mappere i controllere te servis metode za krairanje course brisanje pretragu i vise