@@ -1,6 +1,7 @@
 package com.micro.learningplatform.services;
 
 import com.micro.learningplatform.models.Course;
+import com.micro.learningplatform.models.CourseModule;
 import com.micro.learningplatform.models.CourseStatus;
 import com.micro.learningplatform.models.dto.*;
 import com.micro.learningplatform.repositories.CourseRepository;
@@ -9,21 +10,29 @@ import com.micro.learningplatform.shared.CourseMapper;
 import com.micro.learningplatform.shared.exceptions.CourseAlreadyExistsException;
 import com.micro.learningplatform.shared.exceptions.CourseNotFoundException;
 import com.micro.learningplatform.shared.exceptions.RepositoryException;
+import jakarta.persistence.EntityManager;
 import lombok.RequiredArgsConstructor;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
+
+import static com.micro.learningplatform.models.Course.create;
+import static com.micro.learningplatform.shared.CourseModuleMapper.toResponseWithModules;
 
 @Service
 @Transactional(readOnly = true)
 @RequiredArgsConstructor
 public class CourseServiceImpl implements CourseService {
 
+    private static final Logger log = LogManager.getLogger(CourseServiceImpl.class);
     private final CourseRepository courseRepository;
     private final ApplicationEventPublisher eventPublisher;
     private final CustomCourseRepoImpl customCourseRepo;
@@ -39,7 +48,7 @@ public class CourseServiceImpl implements CourseService {
                     "Course with title '" + createCourseRequest.title() + "' already exists"
             );
         }
-        Course course = Course.create(createCourseRequest);
+        Course course = create(createCourseRequest);
         course = courseRepository.save(course);
         eventPublisher.publishEvent(new CourseCreatedEvent(course.getId()));
         return CourseMapper.toDTO(course);
@@ -106,14 +115,13 @@ public class CourseServiceImpl implements CourseService {
 
     @Override
     @Transactional
-
     public void batchSaveCourses(List<CreateCourseRequest> requests) throws RepositoryException {
         // Prvo provjeravamo postoje li duplikati
         List<String> titles = requests.stream()
                 .map(CreateCourseRequest::title)
                 .toList();
 
-        if (courseRepository.existsByTitleIgnoreCase(titles.get(0))) {
+        if (courseRepository.existsByTitleIgnoreCase(titles.getFirst())) {
             throw new CourseAlreadyExistsException(
                     "One or more courses already exist with the provided titles");
         }
@@ -130,6 +138,100 @@ public class CourseServiceImpl implements CourseService {
         courses.forEach(course ->
                 eventPublisher.publishEvent(new CourseCreatedEvent(course.getId()))
         );
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public CourseStatisticsDTO getStatistics(UUID courseId) {
+        Course course = courseRepository.findById(courseId)
+                .orElseThrow(() -> new CourseNotFoundException(courseId));
+
+        return new CourseStatisticsDTO(
+                course.getId(),
+                course.getTitle(),
+                course.getStatistics().getTotalModules(),
+                course.getStatistics().getTotalDuration(),
+                course.getStatistics().getLastCalculated()
+        );
+    }
+
+
+    @Override
+    @Transactional(readOnly = true)
+    public CourseResponseWithModules getCourseWithModulesAndStatistics(UUID courseId) {
+        Course course = courseRepository.findWithModulesById(courseId)
+                .orElseThrow(() -> new CourseNotFoundException(courseId));
+        // Osigurajte da se statistika ažurira prije vraćanja
+        course.getStatistics().recalculate(course.getModules());
+
+        return CourseMapper.toDTOAdvance(course);
+    }
+
+    // todo razmisliti zelim li ne dosusiti duplikate
+    @Override
+    @Transactional
+    public void addModuleToCourse(UUID courseId, CreateModuleRequest request) {
+        Course course = courseRepository.findById(courseId)
+                .orElseThrow(() -> new CourseNotFoundException(courseId));
+        log.info("Fetched course: {}", course.getId());
+
+        CourseModule module = CourseModule.create(request);
+        log.info("Created module: {}", module);
+
+        // Dodajte modul direktno u postojeću kolekciju
+        if (course.getModules().stream().noneMatch(existingModule ->
+                existingModule.getTitle().equalsIgnoreCase(module.getTitle()))) {
+            course.addModule(module);
+        } else {
+            log.warn("Module with the same title already exists: {}", module.getTitle());
+        }
+
+        // Perzistiraj kolegij
+        courseRepository.save(course);
+        log.info("Course saved successfully with modules.");
+    }
+
+    @Override
+    @Transactional
+    public CourseResponseWithModules createWithModule(
+            CreateCourseRequest createCourseRequest,
+            List<CreateModuleRequest> moduleRequests) {
+        if (courseRepository.existsByTitleIgnoreCase(createCourseRequest.title())) {
+            throw new CourseAlreadyExistsException(
+                    "Course with title '" + createCourseRequest.title() + "' already exists"
+            );
+        }
+        Course newCourse = create(createCourseRequest);
+        List<CourseModule> modules = moduleRequests.stream()
+                .map(request -> {
+                    CourseModule module = CourseModule.create(request);
+                    module.setCourse(newCourse); // Postavi kolegij za modul
+                    return module;
+                })
+                .toList();
+
+        newCourse.getModules().addAll(modules);
+
+        Course savedCourse = courseRepository.save(newCourse);
+
+        return toResponseWithModules(savedCourse);
+    }
+
+    @Override
+    @Transactional
+    public void batchAddCourseWithModules(CreateCourseWithModulesRequest request) {
+        log.info("Creating course with title: {}", request.title());
+
+        Course course = Course.create(new CreateCourseRequest(request.title(), request.description()));
+
+        request.modules().forEach(moduleRequest -> {
+            CourseModule module = CourseModule.create(moduleRequest);
+            course.addModule(module);
+            log.info("Added module: {} to course: {}", module.getTitle(), course.getTitle());
+        });
+
+        courseRepository.save(course);
+        log.info("Course with modules saved successfully.");
     }
 
 
